--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.luleu</groupId>
-    <artifactId>BankoEdit</artifactId>
+    <artifactId>TrashEdit</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
